# goit-ds-hw-02

./: README.md  create_db.py  pyproject.toml  queries.sql  schema.sql  seed.py  task_manager.db
