[project]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalia-Kalashnikova",email = "144282173+Natalia-Kalashnikova@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker (>=37.4.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
